@@ -2,6 +2,7 @@ package com.home.henry.back_tracking_05;
 
 import static org.junit.jupiter.api.Assertions.assertIterableEquals;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -18,9 +19,9 @@ class L039_CombinationSum_004Test {
 
     @Test
     void testCombinationSum() {
-        assertIterableEquals(List.of(List.of(2, 2, 3), List.of(7)),
+        assertIterableEquals(Arrays.asList(Arrays.asList(2, 2, 3), Arrays.asList(7)),
                              l039CombinationSum004UnderTest.combinationSum(new int[] { 2, 3, 6, 7 }, 7));
-        assertIterableEquals(List.of(List.of(2, 2, 2, 2), List.of(2, 3, 3), List.of(3, 5)),
+        assertIterableEquals(Arrays.asList(Arrays.asList(2, 2, 2, 2), Arrays.asList(2, 3, 3), Arrays.asList(3, 5)),
                              l039CombinationSum004UnderTest.combinationSum(new int[] { 2, 3, 5 }, 8));
     }
 }
