@@ -3,6 +3,7 @@ package com.home.henry.dp_06;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -19,9 +20,9 @@ class L139_WordBreak_017Test {
 
     @Test
     void testWordBreak() {
-        assertTrue(l139WordBreak017UnderTest.wordBreak("leetcode", List.of("leet", "code")));
-        assertTrue(l139WordBreak017UnderTest.wordBreak("applepenapple", List.of("apple", "pen")));
+        assertTrue(l139WordBreak017UnderTest.wordBreak("leetcode", Arrays.asList("leet", "code")));
+        assertTrue(l139WordBreak017UnderTest.wordBreak("applepenapple", Arrays.asList("apple", "pen")));
         assertFalse(
-                l139WordBreak017UnderTest.wordBreak("catsandog", List.of("cats", "dog", "sand", "and", "cat")));
+                l139WordBreak017UnderTest.wordBreak("catsandog", Arrays.asList("cats", "dog", "sand", "and", "cat")));
     }
 }
