@@ -2,6 +2,7 @@ package com.home.henry.tree_04;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -22,10 +23,10 @@ class L102_BinaryTreeLevelOrderTraversal_006Test {
     void testLevelOrderBFS() {
         final TreeNode root = TreeTools.strTreeNodes("3,9,20,null,null,15,7");
         final List<List<Integer>> result = l102BinaryTreeLevelOrderTraversal006UnderTest.levelOrderBFS(root);
-        assertEquals(List.of(List.of(3), List.of(9, 20), List.of(15, 7)), result);
-        assertEquals(List.of(),
+        assertEquals(Arrays.asList(Arrays.asList(3), Arrays.asList(9, 20), Arrays.asList(15, 7)), result);
+        assertEquals(Arrays.asList(),
                      l102BinaryTreeLevelOrderTraversal006UnderTest.levelOrderBFS(TreeTools.strTreeNodes("")));
-        assertEquals(List.of(List.of(1)),
+        assertEquals(Arrays.asList(Arrays.asList(1)),
                      l102BinaryTreeLevelOrderTraversal006UnderTest.levelOrderBFS(TreeTools.strTreeNodes("1")));
     }
 
@@ -33,10 +34,10 @@ class L102_BinaryTreeLevelOrderTraversal_006Test {
     void testLevelOrderDFS() {
         final TreeNode root = TreeTools.strTreeNodes("3,9,20,null,null,15,7");
         final List<List<Integer>> result = l102BinaryTreeLevelOrderTraversal006UnderTest.levelOrderDFS(root);
-        assertEquals(List.of(List.of(3), List.of(9, 20), List.of(15, 7)), result);
-        assertEquals(List.of(),
+        assertEquals(Arrays.asList(Arrays.asList(3), Arrays.asList(9, 20), Arrays.asList(15, 7)), result);
+        assertEquals(Arrays.asList(),
                      l102BinaryTreeLevelOrderTraversal006UnderTest.levelOrderDFS(TreeTools.strTreeNodes("")));
-        assertEquals(List.of(List.of(1)),
+        assertEquals(Arrays.asList(Arrays.asList(1)),
                      l102BinaryTreeLevelOrderTraversal006UnderTest.levelOrderDFS(TreeTools.strTreeNodes("1")));
     }
 }
